fixed video alignment issue

--- a/style/styles.css
+++ b/style/styles.css
@@ -145,6 +145,9 @@ main {
 .video-container {
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    padding: 32px;
 }
 
 /* section-3 style */
